Modified the way files are stored (in HDF5 format). Modified the scripts that go along with the new format.

--- a/notebooks/VoxforgeDataPrep.ipynb
+++ b/notebooks/VoxforgeDataPrep.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -478,9 +478,9 @@
     "\n",
     "This particular set of features is calculated to match a specification developed in a classic toolkit known as [HTK](http://htk.eng.cam.ac.uk/). All the details on this feature set can be found under the linked repository [here](https://github.com/danijel3/PyHTK). If you want to experiment with this feature set (highly encouraged) please read the description there.\n",
     "\n",
-    "In the code below, we extract the set of features for each utterance and store the results, together with the classification decision for each frame. All the values are stored in large dense numpy arrays to speed up processing. In order to save the utterance information, a third array is created containing the lengths of utterances. This may come in handy for certain tasks later.\n",
+    "In the code below, we extract the set of features for each utterance and store the results, together with the classification decision for each frame. For performance reasons, we will store all the files in HDF5 format using the *h5py* library. This will allow us to read data directly from the drive without wasting too much RAM. This isn't as important when doing small experiemnts, but it will get relevant for doing the large ones.\n",
     "\n",
-    "Since these files can take a lot of space, we will use regular Numpy binary array format instead of pickling. This takes much less time to write on the disk and wastes less space. For this reason we cannot save more than one variable per file and that's why we will put them in subdirectories instead.\n",
+    "The structure of the HDF5 file is broken into utterances. The file contains a list of utterances sotred as groups in the root and each utterance has 2 datasets: inputs and outputs. Later also normalized inputs are added.\n",
     "\n",
     "Since we intend to use this procedure more than once, we will encapsulate it into a function:"
    ]
@@ -493,26 +493,22 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "\n",
     "sys.path.append('../PyHTK/python')\n",
     "\n",
-    "import os\n",
     "import numpy as np\n",
     "from HTKFeat import MFCC_HTK\n",
+    "import h5py\n",
     "\n",
     "from tqdm import *\n",
     "\n",
-    "def extract_features(corpus, savedir):\n",
+    "def extract_features(corpus, savefile):\n",
     "    \n",
-    "    savedir=os.path.abspath(savedir)\n",
-    "    if not os.path.exists(savedir):\n",
-    "        os.mkdir(savedir)\n",
-    "\n",
-    "\n",
     "    mfcc=MFCC_HTK()\n",
+    "    h5f=h5py.File(savefile,'w')\n",
     "\n",
-    "    inputs=[]\n",
-    "    utt_sizes=[]\n",
-    "    outputs=[]\n",
+    "    uid=0\n",
     "    for utt in tqdm(corpus):\n",
     "\n",
     "        feat=mfcc.get_feats(utt.data)\n",
@@ -521,9 +517,6 @@
     "\n",
     "        feat=np.hstack((feat,delta,acc))\n",
     "        utt_len=feat.shape[0]\n",
-    "\n",
-    "        inputs.append(feat)\n",
-    "        utt_sizes.append(utt_len)\n",
     "\n",
     "        o=[]\n",
     "        for i in range(len(utt.phones)):\n",
@@ -536,15 +529,16 @@
     "\n",
     "        assert len(o)==utt_len\n",
     "\n",
-    "        outputs.extend(o)\n",
-    "\n",
-    "    inputs=np.vstack(inputs)\n",
-    "    utt_sizes=np.array(utt_sizes)\n",
-    "    outputs=np.array(outputs)\n",
-    "\n",
-    "    np.save(savedir+'/in.npy',inputs)\n",
-    "    np.save(savedir+'/out.npy',outputs)\n",
-    "    np.save(savedir+'/utt.npy',utt_sizes)"
+    "        uid+=1\n",
+    "        #instead of a proper name, we simply use a unique identifier: utt00001, utt00002, ..., utt99999\n",
+    "        g=h5f.create_group('/utt{:05d}'.format(uid))\n",
+    "        \n",
+    "        g['in']=feat\n",
+    "        g['out']=o\n",
+    "        \n",
+    "        h5f.flush()\n",
+    "    \n",
+    "    h5f.close()"
    ]
   },
   {
@@ -556,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -568,8 +562,8 @@
     }
    ],
    "source": [
-    "extract_features(corp,'../data/mfcc_train_small')\n",
-    "extract_features(corp_test,'../data/mfcc_test')"
+    "extract_features(corp,'../data/mfcc_train_small.hdf5')\n",
+    "extract_features(corp_test,'../data/mfcc_test.hdf5')"
    ]
   },
   {
@@ -589,41 +583,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def normalize(feat_dir):\n",
-    "    feat_dir=os.path.abspath(feat_dir)\n",
+    "def normalize(corp_file):\n",
     "    \n",
-    "    inputs=np.load(feat_dir+'/in.npy')\n",
-    "    utt_sizes=np.load(feat_dir+'/utt.npy')\n",
+    "    h5f=h5py.File(corp_file)\n",
     "\n",
     "    b=0\n",
-    "    for utt in tqdm(utt_sizes):\n",
-    "        e=b+utt\n",
-    "\n",
-    "        f=inputs[b:e]#this is a view, so changes to this are done in-place\n",
-    "        f-=np.mean(f)\n",
-    "        f/=np.std(f)\n",
-    "\n",
-    "        b=e\n",
-    "\n",
-    "    np.save(feat_dir+'/norm.npy',inputs)"
+    "    for utt in tqdm(h5f):\n",
+    "        \n",
+    "        f=h5f[utt]['in']\n",
+    "        n=f-np.mean(f)\n",
+    "        n/=np.std(n)        \n",
+    "        h5f[utt]['norm']=n\n",
+    "        \n",
+    "        h5f.flush()\n",
+    "        \n",
+    "    h5f.close()\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
-    "normalize('../data/mfcc_train_small')\n",
-    "normalize('../data/mfcc_test')"
+    "normalize('../data/mfcc_train_small.hdf5')\n",
+    "normalize('../data/mfcc_test.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see what's inside we can run the following command in the terminal:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "in                       Dataset {486, 39}\r\n",
+      "norm                     Dataset {486, 39}\r\n",
+      "out                      Dataset {486}\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!h5ls ../data/mfcc_test.hdf5/utt00001"
    ]
   },
   {
@@ -632,24 +659,50 @@
    "source": [
     "## Simple classification example\n",
     "\n",
-    "To finish here, we will use a simple SGD classifier from the scikit.learn library to classify the phonemes from the database. We have all the datasets prepared above, so all we need to do is load the preapared arrays:"
+    "To finish here, we will use a simple SGD classifier from the scikit.learn library to classify the phonemes from the database. We have all the datasets prepared above, so all we need to do is load the preapared arrays. We will use a special class called *Corpus* included in the *data.py* file. In the constructor we provide the path to the file and say that we wish to load the normalized inputs. Next we use the *get()* method to load the list of all the input and out values. This method returns a tuple - one value for inputs and one for outputs. Each of these is a list of arrays corresponding to individual utterances. We can then convert it into a single contiguous array using the *concatenate* and *vstack* methods:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training input shape: (1438429, 39)\n",
+      "Training output shape: (1438429,)\n",
+      "Test input shape: (156679, 39)\n",
+      "Test output shape: (156679, 39)\n"
+     ]
+    }
+   ],
    "source": [
+    "from data import Corpus\n",
     "import numpy as np\n",
     "\n",
-    "tr_in=np.load('../data/mfcc_train_small/norm.npy')\n",
-    "tr_out=np.load('../data/mfcc_train_small/out.npy')\n",
+    "train=Corpus('../data/mfcc_train_small.hdf5',load_normalized=True)\n",
+    "test=Corpus('../data/mfcc_test.hdf5',load_normalized=True)\n",
     "\n",
-    "tst_in=np.load('../data/mfcc_test/norm.npy')\n",
-    "tst_out=np.load('../data/mfcc_test/out.npy')"
+    "g=train.get()\n",
+    "tr_in=np.vstack(g[0])\n",
+    "tr_out=np.concatenate(g[1])\n",
+    "\n",
+    "print 'Training input shape: {}'.format(tr_in.shape)\n",
+    "print 'Training output shape: {}'.format(tr_out.shape)\n",
+    "\n",
+    "g=test.get()\n",
+    "tst_in=np.vstack(g[0])\n",
+    "tst_out=np.concatenate(g[1])\n",
+    "\n",
+    "print 'Test input shape: {}'.format(tst_in.shape)\n",
+    "print 'Test output shape: {}'.format(tst_in.shape)\n",
+    "\n",
+    "train.close()\n",
+    "test.close()"
    ]
   },
   {
@@ -663,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -694,11 +747,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 56min 14s, sys: 7.4 s, total: 56min 21s\n",
+      "Wall time: 5min 31s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SGDClassifier(alpha=0.0001, average=False, class_weight=None, epsilon=0.1,\n",
+       "       eta0=0.0, fit_intercept=True, l1_ratio=0.15,\n",
+       "       learning_rate='optimal', loss='log', n_iter=100, n_jobs=-1,\n",
+       "       penalty='l2', power_t=0.5, random_state=None, shuffle=True,\n",
+       "       verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%time model.fit(tr_in,tr_out)"
    ]
@@ -712,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -721,7 +797,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 51.807836%\n"
+      "Accuracy: 51.881873%\n"
      ]
     }
    ],
@@ -745,14 +821,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 136/58946 [00:20<53:25, 18.35it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "corp=loadAlignedCorpus('../data/ali_train.pklz','../audio')\n",
+    "extract_features(corp,'../data/mfcc_train.hdf5')\n",
+    "normalize('../data/mfcc_train.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "corp=loadAlignedCorpus('../data/ali_train.pklz','../audio')\n",
-    "extract_features(corp,'../data/mfcc_train')\n",
-    "normalize('../data/mfcc_train')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
