--- a/notebooks/TIMITDataPrep.ipynb
+++ b/notebooks/TIMITDataPrep.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by loading a list of files and their alignemts. This was generously provided to us by Microsoft in their Deep Learning library project called CNTK. The files in question are located on their [github](https://github.com/Microsoft/CNTK) page in the *CNTK/Examples/Speech/Miscellaneous/TIMIT/lib/mlf/* folder. I have copied this into my *data* folder and using the methods below loaded the required datasets."
+    "We begin by loading a list of files and their alignemts. This was generously provided to us by Microsoft in their Deep Learning library project called CNTK. The files in question are located on their [github](https://github.com/Microsoft/CNTK) page in the *CNTK/Examples/Speech/Miscellaneous/TIMIT/lib/mlf/* folder. I have copied this into my *data* folder and using the methods below loaded the required MLF files."
    ]
   },
   {
@@ -52,7 +52,7 @@
    "source": [
     "TIMIT was originally split into several part. The largest is the trianing portion with 3696 utterances spoken by 462 different people. The test set contains 1344 utterances, but most paper use a smaller portion of this, known as the \"core test set\" which has 192 files. Finally, there is also a portion that has many different speakers reading two identical sentences, known as the \"SA\" dataset. This last one is of little use for studying ASR, but may be interesting for research on speaker variablity and such stuff.\n",
     "\n",
-    "The Microsoft people use the standard 3969 training set - as do most other researchers presenting their results on TIMIT. They also use the core test set of 192 as everyone else. For the dev data, they use a collection of 400 sentences from the test set that aren't in the core set. Here will use the same:"
+    "The Microsoft people use the standard 3969 training set - as do most other researchers presenting their results on TIMIT. They also use the core test set of 192 as everyone else. For the dev data, they use a collection of 400 sentences from the test set that aren't in the core set. Here we will use the same:"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After many years of using it, I lost the original TIMIT set and I use an organization method that may be different than other people. I split all the data into train, test, core_test and sa subfolders and dumped all the files from that set into these folders. I also changed the naming scheme to *{speaker}_{utterance}.wav*, so for example I'll have such file names:"
+    "After many years of using it, I lost the original TIMIT set and I use an organization method that may be different than other people. I split all the data into train, test, core_test and sa subfolders and dumped all the files from that set into these folders. I also changed the naming scheme to speaker-underscore-utterance-dot-wav, so for example I'll have such file names:"
    ]
   },
   {
