Fixed TIMIT reading procedures...

--- a/notebooks/TIMITDataPrep.ipynb
+++ b/notebooks/TIMITDataPrep.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -30,16 +30,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We begin by loading a list of files and their alignemts. This was generously provided to us by Microsoft in their Deep Learning library project called CNTK. The files in question are located on their [github](https://github.com/Microsoft/CNTK) page in the *CNTK/Examples/Speech/Miscellaneous/TIMIT/lib/mlf/* folder. I have copied this into my *data* folder and using the methods below loaded the required MLF files."
+    "## TIMIT alignments\n",
+    "\n",
+    "We begin by loading a list of files and their alignemts. Unfortunately, I have lost mine that came with the original corpus and I have them stored in Praat TextGrid format instead. The methods below will load the TextGrids and their corresponding audio and store them in a list, just like with the VoxForge database. The method here requires a list of files to load and their location. A list of files for the corresponding dataset is included in the repository. More about the actual counts is written in the sections below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "train_corp=prepare_corp_dir('../data/TIMIT_train.list','../TIMIT/train')\n",
+    "dev_corp=prepare_corp_dir('../data/TIMIT_dev.list','../TIMIT/test')\n",
+    "test_corp=prepare_corp_dir('../data/TIMIT_test.list','../TIMIT/core_test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CNTK alignemnts\n",
+    "\n",
+    "*NOTE: use this section only if you need to do sequence decoding*\n",
+    "\n",
+    "Another source of information is a Deep Learning library project called CNTK released by Microsoft. The files in question are located on their [Github](https://github.com/Microsoft/CNTK) page in the *CNTK/Examples/Speech/Miscellaneous/TIMIT/lib/mlf/* folder. I have copied this into my *data* folder. What we're interested in are the MLF files that have state-level alignments, that is each phoneme is modeled by a sequence of 3 states (ending in *s2*, *s3* and *s4*; 1 and 5 are non-emitting states not present in the output). \n",
+    "\n",
+    "Many papers use this model of 183 so-called *sonemes* instead of the 61 phonemes present in the original corpus. If you are doing the sequence decoding task, you may want to use these alignemnts instead. For framewise phoneme classificaion use the alignemnts above, as these are not accurate enough for that task."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "train_mlf=load_mlf('../data/mlf/TIMIT.train.align_cistate.mlf.cntk')\n",
     "dev_mlf=load_mlf('../data/mlf/TIMIT.dev.align_cistate.mlf.cntk')\n",
@@ -50,14 +76,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TIMIT was originally split into several part. The largest is the trianing portion with 3696 utterances spoken by 462 different people. The test set contains 1344 utterances, but most paper use a smaller portion of this, known as the \"core test set\" which has 192 files. Finally, there is also a portion that has many different speakers reading two identical sentences, known as the \"SA\" dataset. This last one is of little use for studying ASR, but may be interesting for research on speaker variablity and such stuff.\n",
+    "The *prepare_corp* method will load all the audio and prepare the soneme lists from the MLF into the same format as presented in the VoxforgeDataPrep notebook. Again, run this only if you need to do sequence decoding:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "train_corp=prepare_corp(train_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/train')\n",
+    "dev_corp=prepare_corp(dev_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/test')\n",
+    "test_corp=prepare_corp(test_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/core_test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## About the corpus\n",
+    "\n",
+    "TIMIT was originally split into several parts. The largest is the trianing portion with 3696 utterances spoken by 462 different people. The test set contains 1344 utterances, but most paper use a smaller portion of this, known as the \"core test set\" which has 192 files. Finally, there is also a portion that has many different speakers reading two identical sentences, known as the \"SA\" dataset. This last one is of little use for studying ASR, but may be interesting for research on speaker variablity and such stuff.\n",
     "\n",
     "The Microsoft people use the standard 3969 training set - as do most other researchers presenting their results on TIMIT. They also use the core test set of 192 as everyone else. For the dev data, they use a collection of 400 sentences from the test set that aren't in the core set. Here we will use the same:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -73,21 +119,21 @@
     }
    ],
    "source": [
-    "print 'Train utterance num: {}'.format(len(train_mlf.keys()))\n",
-    "print 'Dev utterance num: {}'.format(len(dev_mlf.keys()))\n",
-    "print 'Test utterance num: {}'.format(len(test_mlf.keys()))"
+    "print 'Train utterance num: {}'.format(len(train_corp))\n",
+    "print 'Dev utterance num: {}'.format(len(dev_corp))\n",
+    "print 'Test utterance num: {}'.format(len(test_corp))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After many years of using it, I lost the original TIMIT set and I use an organization method that may be different than other people. I split all the data into train, test, core_test and sa subfolders and dumped all the files from that set into these folders. I also changed the naming scheme to speaker-underscore-utterance-dot-wav, so for example I'll have such file names:"
+    "The datastructure describing the corpus is a list with objects containing the following information:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -96,60 +142,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mfrm0_si1155.wav\n"
+      "mfrm0_si1155\n",
+      "[ 5 -2  0 ...,  3  4  8]\n",
+      "(61748,)\n",
+      "[14, 36, 9, 59, 26, 51, 53, 0, 28, 39, 32, 46, 5, 49, 52, 18, 49, 59, 48, 7, 49, 37, 5, 10, 54, 40, 59, 48, 3, 38, 5, 10, 54, 40, 29, 59, 11, 50, 12, 22, 21, 44, 5, 48, 41, 33, 1, 0, 52, 5, 10, 54, 24, 59, 14]\n",
+      "[12, 4, 7, 5, 5, 5, 4, 7, 4, 6, 6, 3, 4, 5, 12, 13, 8, 8, 4, 11, 6, 2, 7, 4, 7, 16, 11, 6, 10, 2, 5, 7, 5, 14, 3, 5, 7, 8, 8, 4, 4, 3, 4, 6, 8, 10, 7, 14, 10, 5, 4, 4, 8, 16, 11]\n"
      ]
     }
    ],
    "source": [
-    "print train_mlf.keys()[0]+'.wav'"
+    "print train_corp[0].name\n",
+    "print train_corp[0].data\n",
+    "print train_corp[0].data.shape\n",
+    "print train_corp[0].phones\n",
+    "print train_corp[0].ph_lens"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The *prepare_corp* method will load all the audio and prepare the phoneme (actually *soneme*) lists from the MLF into the same format as presented in the VoxforgeDataPrep notebook: a list of utterance objects where each contains audio data, list of phonemes and a list of their lengths. Such a datastructure can be processed by the *extract_features* and *normalize* methods below."
+    "## Feature extraction\n",
+    "\n",
+    "Here we extract the simple 39 MFCC feature set. This is the same method as in the VoxforgeDataPrep notebook. It stores the processed data into an HDF5 file containg an IN (for the features) and OUT (for phoneme classes) arrays for each utterance:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
-   "source": [
-    "train_corp=prepare_corp(train_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/train')\n",
-    "dev_corp=prepare_corp(dev_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/test')\n",
-    "test_corp=prepare_corp(test_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/core_test')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we extract the simple 39 MFCC feature set. This is the same method as in the VoxforgeDataPrep notebook:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "extract_features(train_corp, '../data/TIMIT_train.hdf5')\n",
     "extract_features(dev_corp, '../data/TIMIT_dev.hdf5')\n",
@@ -160,22 +184,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we normalize the data, same as with Voxforge:"
+    "Here we normalize the data, same as before. This simply augments the database with a NORM array which is a per-utterance normalized version of the IN aray:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
     "normalize('../data/TIMIT_train.hdf5')\n",
     "normalize('../data/TIMIT_dev.hdf5')\n",
