--- a/notebooks/TIMITDataPrep.ipynb
+++ b/notebooks/TIMITDataPrep.ipynb
@@ -62,10 +62,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "train_mlf=load_mlf('../data/mlf/TIMIT.train.align_cistate.mlf.cntk')\n",
     "dev_mlf=load_mlf('../data/mlf/TIMIT.dev.align_cistate.mlf.cntk')\n",
@@ -80,10 +82,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
    "source": [
     "train_corp=prepare_corp(train_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/train')\n",
     "dev_corp=prepare_corp(dev_mlf,'../data/mlf/TIMIT.statelist','../TIMIT/test')\n",
