Fixed TIMIT to use original PHN files instead of TextGrids.

--- a/notebooks/TIMITDataPrep.ipynb
+++ b/notebooks/TIMITDataPrep.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -32,16 +32,22 @@
    "source": [
     "## TIMIT alignments\n",
     "\n",
-    "We begin by loading a list of files and their alignemts. Unfortunately, I have lost mine that came with the original corpus and I have them stored in Praat TextGrid format instead. The methods below will load the TextGrids and their corresponding audio and store them in a list, just like with the VoxForge database. The method here requires a list of files to load and their location. A list of files for the corresponding dataset is included in the repository. More about the actual counts is written in the sections below."
+    "We begin by loading a list of files and their alignemts. The methods below will load the PHN files and their corresponding audio and store them in a list, just like with the VoxForge database. The method here requires a list of files to load and their location. A list of files for the corresponding dataset is included in the repository. More about the actual counts is written in the sections below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "train_corp=prepare_corp_dir('../data/TIMIT_train.list','../TIMIT/train')\n",
     "dev_corp=prepare_corp_dir('../data/TIMIT_dev.list','../TIMIT/test')\n",
@@ -107,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +156,7 @@
       "[ 5 -2  0 ...,  3  4  8]\n",
       "(61748,)\n",
       "[14, 36, 9, 59, 26, 51, 53, 0, 28, 39, 32, 46, 5, 49, 52, 18, 49, 59, 48, 7, 49, 37, 5, 10, 54, 40, 59, 48, 3, 38, 5, 10, 54, 40, 29, 59, 11, 50, 12, 22, 21, 44, 5, 48, 41, 33, 1, 0, 52, 5, 10, 54, 24, 59, 14]\n",
-      "[12, 4, 7, 5, 5, 5, 4, 7, 4, 6, 6, 3, 4, 5, 12, 13, 8, 8, 4, 11, 6, 2, 7, 4, 7, 16, 11, 6, 10, 2, 5, 7, 5, 14, 3, 5, 7, 8, 8, 4, 4, 3, 4, 6, 8, 10, 7, 14, 10, 5, 4, 4, 8, 16, 11]\n"
+      "[12, 4, 8, 5, 4, 5, 4, 7, 4, 6, 7, 3, 3, 6, 11, 13, 8, 8, 4, 11, 6, 2, 7, 4, 7, 16, 11, 6, 10, 2, 5, 7, 5, 14, 3, 6, 6, 8, 8, 4, 5, 2, 4, 6, 9, 9, 7, 15, 9, 5, 5, 3, 9, 15, 11]\n"
      ]
     }
    ],
@@ -173,11 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "extract_features(train_corp, '../data/TIMIT_train.hdf5')\n",
     "extract_features(dev_corp, '../data/TIMIT_dev.hdf5')\n",
@@ -193,11 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
    "source": [
     "normalize('../data/TIMIT_train.hdf5')\n",
     "normalize('../data/TIMIT_dev.hdf5')\n",
@@ -221,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11+"
   }
  },
  "nbformat": 4,
